--- a/covid_app/templates/index.html
+++ b/covid_app/templates/index.html
@@ -1,23 +1,36 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block content %}
+<p> When you are done, this page should be able to give a list of everyone you have met in the last 2 weeks
+</p>
 
-{% block content %}
-    <p> When you are done, this page should be able to give a list of everyone you have met in the last 2 weeks
-    </p>    
-    
-    <!-- when the user submits this form, it will send the information submitted from the client (frontend)
+<!-- when the user submits this form, it will send the information submitted from the client (frontend)
     to the server (backend). It will send that infromation to a particular URI, at "/color". 
     Your server will then run the code which is defined in website.py at that route. -->
 
-    <form action="/create" method="post">
-        <!-- add the contents of your form here -->
-        <label for="name"> Today I met: </label>
-        <input type="text" name="name" id="name" required>
-        <input type="submit" value="Submit">
-    </form>
+<form action="/create" method="post">
+    <!-- add the contents of your form here -->
+    <label for="name"> Today I met: </label>
+    <input type="text" name="name" id="name" required>
+    <label for="date"> Date:</label>
+    <input type="date" name="date" id="date" required>
+    <input type="submit" value="Submit">
+</form>
 
-    <p> So far, I have met...
-        {{meetings}}
-    </p>
+
+<table class="table">
+    <tr class="table_header">
+        <th class="table_cell">Name</th>
+        <th>Date</th>
+    </tr>
+    {% for row in data %}
+    <tr class="table_row">
+        {% for cell in row %}
+        <td class="table_cell">{{ cell }}</td>
+        {% endfor %}
+    </tr>
+    {% endfor %}
+
+
+</table>
 
 
 {% endblock %}
