--- a/covid_app/templates/base.html
+++ b/covid_app/templates/base.html
@@ -23,6 +23,6 @@
         {% block content%} {% endblock %}
     </main>
     <footer>
-        <h3> By Your Name Here </h3>
+        <h3> By Sonja </h3>
     </footer>
 </body>
