--- a/covid_app/static/styles.css
+++ b/covid_app/static/styles.css
@@ -17,6 +17,7 @@ footer {
 .table {
     border-spacing: 0;
     background-color: #f5f5f5;
+    margin-top: 1rem;
 }
 
 .table_row:nth-child(even) {
@@ -25,6 +26,7 @@ footer {
 
 .table_header {
     text-align: left;
+    padding: 8px;
 }
 
 .table_cell {
