--- a/covid_app/templates/index.html
+++ b/covid_app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<p> When you are done, this page should be able to give a list of everyone you have met in the last 2 weeks
+<p> Here you can track who you have met in the last two weeks <br> NOTE: Anything before two weeks will be deleted automatically/not show up in the list ;)
 </p>
 
 <!-- when the user submits this form, it will send the information submitted from the client (frontend)
@@ -19,7 +19,8 @@
 <table class="table">
     <tr class="table_header">
         <th class="table_cell">Name</th>
-        <th>Date</th>
+        <th class="table_cell">Date</th>
+        <th class="table_cell">Index</th>
     </tr>
     {% for row in data %}
     <tr class="table_row">
