--- a/covid_app/static/styles.css
+++ b/covid_app/static/styles.css
@@ -16,12 +16,19 @@ footer {
 
 .table {
     border-spacing: 0;
-    background-color: #f5f5f5;
+    background-color: #cbe7ff;
     margin-top: 1rem;
+    float: left;
+}
+
+.table_contacts {
+    border-spacing: 0;
+    background-color: #cbe7ff;
+    margin: 1rem auto auto 30rem;
 }
 
 .table_row:nth-child(even) {
-    background-color: #e5e5e5;
+    background-color: #94bfe6;
 }
 
 .table_header {
