--- a/covid_app/templates/index.html
+++ b/covid_app/templates/index.html
@@ -1,15 +1,35 @@
 {% extends "base.html" %} {% block content %}
-<p> Here you can track who you have met in the last two weeks <br> NOTE: Anything before two weeks will be deleted automatically/not show up in the list ;)
+<p> Here you can track who you have met in the last two weeks
+    <br> NOTE: Anything before two weeks will be deleted automatically/not show up in the list ;)
 </p>
 
 <!-- when the user submits this form, it will send the information submitted from the client (frontend)
     to the server (backend). It will send that infromation to a particular URI, at "/color". 
     Your server will then run the code which is defined in website.py at that route. -->
 
+1. Create Contact
+<form action="/createContact" method="post">
+    <!-- add the contents of your form here -->
+    <label for="cname"> Name: </label>
+    <input type="text" name="cname" id="cname" required>
+    <label for="email"> Email:</label>
+    <input type="email" name="email" id="email">
+    <label for="tel"> Phone Number: </label>
+    <input type="tel" name="tel" id="tel">
+    <input type="submit" value="Submit">
+</form>
+<br><br> 2. Select Contact and add Date
 <form action="/create" method="post">
     <!-- add the contents of your form here -->
     <label for="name"> Today I met: </label>
-    <input type="text" name="name" id="name" required>
+    <select name="name">
+        {% for row in contacts %}
+          
+            <option value="{{ row[0] }}">{{ row[0] }}</option>
+
+        {% endfor %}
+	</select>
+
     <label for="date"> Date:</label>
     <input type="date" name="date" id="date" required>
     <input type="submit" value="Submit">
@@ -20,18 +40,29 @@
     <tr class="table_header">
         <th class="table_cell">Name</th>
         <th class="table_cell">Date</th>
-        <th class="table_cell">Index</th>
     </tr>
-    {% for row in data %}
+    {% for row in meetings %}
+    <tr class="table_row">
+        <td class="table_cell">{{ row[0] }}</td>
+        <td class="table_cell">{{ row[1] }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
+
+<table class="table_contacts">
+    <tr class="table_header">
+        <th class="table_cell">Name</th>
+        <th class="table_cell">Email</th>
+        <th class="table_cell">Telephone Nr.</th>
+    </tr>
+    {% for row in contacts %}
     <tr class="table_row">
         {% for cell in row %}
         <td class="table_cell">{{ cell }}</td>
         {% endfor %}
     </tr>
     {% endfor %}
-
-
 </table>
-
 
 {% endblock %}
