--- a/covid_full_stack_app/covid_full_stack_app/templates/base.html
+++ b/covid_full_stack_app/covid_full_stack_app/templates/base.html
@@ -2,14 +2,15 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <!-- the page title will be a varible passed to the render_template() function for each page separately-->
     <title> {{ page_title }}</title>
-  	<meta charset="utf-8"/>
-    
+    <meta charset="utf-8" />
+
     <!-- include the css from the file static/style.css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    
+
     <!-- include the image  static/virus.png as the website's favicon
     file from wikipedia orginally: https://commons.wikimedia.org/wiki/File:Stup_Virus.png
     -->
@@ -17,83 +18,92 @@
 
     <!-- include the js from the file static/script.js -->
     <script>
-    
-          function getMeetings() {
-        // The key javascript function here is fetch(), which is designed to get data from the backend.
-        // The code below is more readable than other examples you will find on the internet, but
-        // does the same thing. Borrowed from https://javascript.info/fetch
+        function getMeetings() {
+            // The key javascript function here is fetch(), which is designed to get data from the backend.
+            // The code below is more readable than other examples you will find on the internet, but
+            // does the same thing. Borrowed from https://javascript.info/fetch
 
-        fetch("/api/meetings/all")
-          .then(
-            // this is a magical feature of javascript called an "anonymous function" which is defined
-            // on the fly, without a name.
-            function (response) {
-              // if the response is not a 200 OK (happy), "return", i.e. stop processing the data.
-              if (response.status !== 200) {
-                // this is the equivalent to a python print() statement, and it will print to the browser console
-                console.log(
-                  "Looks like there was a problem. Status Code: " + response.status
-                );
-                return;
-              }
+            fetch("/api/meetings/all")
+                .then(
+                    // this is a magical feature of javascript called an "anonymous function" which is defined
+                    // on the fly, without a name.
+                    function(response) {
+                        // if the response is not a 200 OK (happy), "return", i.e. stop processing the data.
+                        if (response.status !== 200) {
+                            // this is the equivalent to a python print() statement, and it will print to the browser console
+                            console.log(
+                                "Looks like there was a problem. Status Code: " + response.status
+                            );
+                            return;
+                        }
 
-              // if the response is a 200, check the data returned from the backend isin JSON format.
-              // if that passes, print the data to the javascript console on the browser. 
-              response.json().then(function (data) {
-                console.log(data);
+                        // if the response is a 200, check the data returned from the backend isin JSON format.
+                        // if that passes, print the data to the javascript console on the browser. 
+                        response.json()
+                            .then(function(data) {
+                                const main = document.getElementById("result");
+                                main.innerHTML = " ";
+                                const getListOfNames = (data) => {
+                                    const names = data
+                                        .map((person) => `<li>${data}</li>`)
+                                        .join("\n");
+                                    return names;
+                                };
 
-                // Your Homework: instead of printoing to the cosnole, change what the user sees. 
 
-                
-              });
-            }
-          )
-          .catch(function (err) {
-            console.log("Fetch Error, booo!", err);
-          });
-      }
+                                console.log(data);
+                                data.forEach(element => main.innerHTML = main.innerHTML + getListOfNames(element));
 
-      function createNewMeeting() {
-        // creates a new javascript object called form_data, of the type FormData, based on the contents
-        // of a form called meeting-form, which is the form defined in index.html.
-        const form_data = new FormData(document.getElementById("meeting-form"));
-        fetch("/api/meetings", {
-          method: "POST",
-          body: form_data,
-        })
-          .then(
-            //same basic code as above - catch errors if there are any.
-            function (response) {
-              // if the response is not a 201 OK (resource created), log it.
-              if (response.status !== 201) {
-                // this is the equivalent to a python print() statement, and it will print to the browser console
-                console.log(
-                  "Looks like there was a problem. Status Code: " + response.status
-                );
-              }
-            }
-          )
-          .catch(function (err) {
-            console.log("Fetch Error, booo!", err);
-          });
-      }
+                                //document.querySelector(".result").innerHTML = data;
+                            });
 
-    
+                    }
+                )
+                .catch(function(err) {
+                    console.log("Fetch Error, booo!", err);
+                });
+        }
+
+        function createNewMeeting() {
+            // creates a new javascript object called form_data, of the type FormData, based on the contents
+            // of a form called meeting-form, which is the form defined in index.html.
+            const form_data = new FormData(document.getElementById("meeting-form"));
+            fetch("/api/meetings", {
+                    method: "POST",
+                    body: form_data,
+                })
+                .then(
+                    //same basic code as above - catch errors if there are any.
+                    function(response) {
+                        // if the response is not a 201 OK (resource created), log it.
+                        if (response.status !== 201) {
+                            // this is the equivalent to a python print() statement, and it will print to the browser console
+                            console.log(
+                                "Looks like there was a problem. Status Code: " + response.status
+                            );
+                        }
+                    }
+                )
+                .catch(function(err) {
+                    console.log("Fetch Error, booo!", err);
+                });
+        }
     </script>
-  </head>
-  <body>
+</head>
 
-  <!-- this headline will appear on all pages. -->
-  <header>
-    <div class="banner">
-      <h1> Covid Diary  </h1> 
-    </div>
-  </header>
-  <main>
-    {% block content%}
-    {% endblock %}
-  </main>
-  <footer>
-    <h3> By Your Name Here </h3>
-  </footer>
-  </body>
+<body>
+
+    <!-- this headline will appear on all pages. -->
+    <header>
+        <div class="banner">
+            <h1> Covid Diary </h1>
+        </div>
+    </header>
+    <main>
+        {% block content%} {% endblock %}
+        <div class="result" id="result"></div>
+    </main>
+    <footer>
+        <h3> By Sonja Sönnichsen </h3>
+    </footer>
+</body>
